--- a/apartado_inicio.html
+++ b/apartado_inicio.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROYECTO INVENTARIO</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/apartado_inicio.css">
+
 </head>
 <body>
     <header>
@@ -17,9 +15,9 @@
 
     </header>
     <main>
-        <h1 class="main__titulo" >
+        <a class="main__titulo"  href="Inicio_sesion.html">
             Contabilidad-Sistematica
-        </h1>
+        </a>
 
     </main>
     <footer>
