Termine la organizacion de carpetas index y inicio de sesion por terminar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <img class="navbar__logo" src="img/LOGO.png" alt="logo_sistema">
+            <img class="navbar__logo" src="assets/img/LOGO.png" alt="logo_sistema">
         </nav>
 
     </header>
