hice algunos arreglos al registrar el usuario para que elija el rol, agregue otros secciones donde puedo registrar el bar, el producto todo con sus carpetas debidas capetas

--- a/registroBar.html
+++ b/registroBar.html
@@ -23,7 +23,7 @@
         <form class="main__formulario">
             <div class="campo">
                 <label for="name" class="formulario__nombre"></label>
-                <input id="name" class="form__input_name" type="text" required placeholder="Nombre">
+                <input id="name" class="form__input_name" type="text" required placeholder="Nombre del bar">
             </div>
 
             <div class="campo">
@@ -31,16 +31,9 @@
                 <input id="direccion" class="form__input_direccion" type="text"    required placeholder="Direccion">      
             </div>
 
-            <div class="campo">
-                <label for="telefono" class="formulario__tel__icon"></label>
-                <input id="telefono" class="form__input_tel" type="text"    required placeholder="Telefono">      
-            </div>
-
-
-
             <div class="estilo_difuminado">
                 <div class="contenedor__btnRegistro">
-                    <a href="Bienvenida.html" class="formulario__btnRegistro" >Finalizar</a>
+                    <a href="registroBar_fin.html" class="formulario__btnRegistro" >Finalizar</a>
                 </div>
             </div>
             
