--- a/registroUser.html
+++ b/registroUser.html
@@ -27,11 +27,9 @@
             <div class="form__iconTiposDoc">
                 <i class="fas fa-angle-down icono" ></i>
                 <select  class="form__tiposDocumento" required>
-                    <option  disabled selected> Tipo de documento</option>
-                    <option >Cédula de ciudadanía</option>
-                    <option >Tarjeta de identidad</option>
-                    <option >Cédula de extranjería</option>
-                    <option >Pasaporte</option>
+                    <option  disabled selected> Rol</option>
+                    <option >Administrador</option>
+                    <option >Trabajador</option>
                 </select>
             </div>
             <div class="form__iconDocum">
