Deje las variables root aparte y las conecte a todos los estilos

--- a/registroUser.html
+++ b/registroUser.html
@@ -35,7 +35,7 @@
             <div class="form__iconDocum">
                 <i class="fas fa-caret-right icono"></i>
                 <label for="formulario__documento"></label>
-                <input type="text" id="numero-documento" name="numero-documento" placeholder="Número de documento" required>
+                <input type="text" id="numero-documento" name="numero-documento" placeholder="Nombre" required>
             </div>
 
             <div class="estilo_difuminado">
