--- a/registroUser2.html
+++ b/registroUser2.html
@@ -24,15 +24,25 @@
         </section>
 
         <form class="main__formulario">
-            <div class="campo">
-                <label for="name" class="formulario__nombre"></label>
-                <input id="name" class="form__input_name" type="text" required placeholder="Nombre">
+
+            <div>
+                <label for="telefono" class="Formulario__telefono"></label>
+                <input id="text" class="form__input_telefono" required placeholder="Telefono 1*">
             </div>
 
+            <div>
+                <label for="telefono" class="Formulario__telefono"></label>
+                <input id="text" class="form__input_telefono" required placeholder="Telefono 2">
+            </div>
 
             <div class="campo">
                 <label for="email" class="formulario__email__icon"></label>
-                <input id="email" class="form__input_email" type="email"    required placeholder="Correo">      
+                <input id="email" class="form__input_email" type="email"    required placeholder="Correo 1*">      
+            </div>
+
+            <div class="campo">
+                <label for="email" class="formulario__email__icon"></label>
+                <input id="email" class="form__input_email" type="email"    required placeholder="Correo 2">      
             </div>
 
             <div class="campo">
