quité las etiqueta de a que tenia como botones y en el form coloque en el action la ruta

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </header>
     <main>
-        <a class="main__titulo"  href="Inicio_sesion.html">
+        <a class="main__titulo"  href="/view/Inicio_sesion.html">
             Contabilidad-Sistematica
         </a>
 
